package com.danucdev.thesimpsons.ui.core

class TestTags
{
    companion object {
        const val ERROR_MSG = "errorMsg"
        const val NEXT_BUTTON = "nextButton"
        const val CHECK_BUTTON = "checkButton"
        const val GENERIC_TEXT_FIELD = "genericTextField"
        const val BURGER_MENU = "burgerMenu"
        const val PROFILE_NAVIGATION_ITEM = "profileNavItem"
    }
}